# gh-trending-rss

./: .dockerignore  Dockerfile  README.md  generate_rss.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: sample_trending.html  test_build_feed.py  test_extract_repos.py  test_parse_int.py
